// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  z-index: 1100;
  pointer-events: none;
}

.c5 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  max-width: 200px;
}

.c6 {
  background-color: hsla(216,33%,29%,1);
  border-width: 1px;
  border-radius: 4px;
  border-color: hsla(216,27%,36%,1);
  border-style: solid;
  box-shadow: 0 4px 8px -2px hsla(217,56%,17%,0.1),0 2px 4px -2px hsla(217,56%,17%,0.06);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r0:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c1 c2"
        data-blade-component="base-box"
      >
        <div
          class="c3"
          data-blade-component="base-text"
        >
          Hover me
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r2:"
  >
    <div
      class="c4"
      data-blade-component="tooltip"
      id=":r0:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c5 c6"
        data-blade-component="base-box"
      >
        <p
          class="c7"
          data-blade-component="text"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(216, 33%, 29%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r3:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(216, 27%, 36%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(216, 33%, 29%, 1)"
          />
          <clippath
            id=":r3:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Tooltip /> should render tooltip with custom zIndex 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2 {
  opacity: 1;
}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<div>
  <button
    aria-describedby=":r8:"
    class="c0"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="c1 c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        data-blade-component="base-text"
      >
        Hover me
      </div>
    </div>
  </button>
</div>
`;

exports[`<Tooltip /> should render with title 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  z-index: 1100;
  pointer-events: none;
}

.c5 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  max-width: 200px;
}

.c6 {
  background-color: hsla(216,33%,29%,1);
  border-width: 1px;
  border-radius: 4px;
  border-color: hsla(216,27%,36%,1);
  border-style: solid;
  box-shadow: 0 4px 8px -2px hsla(217,56%,17%,0.1),0 2px 4px -2px hsla(217,56%,17%,0.06);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c3 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c8 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2 {
  opacity: 1;
}

@media screen and (min-width:320px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    pointer-events: none;
  }
}

@media screen and (min-width:1200px) {
  .c4 {
    pointer-events: none;
  }
}

<body>
  <div>
    <button
      aria-describedby=":r4:"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c1 c2"
        data-blade-component="base-box"
      >
        <div
          class="c3"
          data-blade-component="base-text"
        >
          Hover me
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r6:"
  >
    <div
      class="c4"
      data-blade-component="tooltip"
      id=":r4:"
      pointer-events="none"
      role="tooltip"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c5 c6"
        data-blade-component="base-box"
      >
        <p
          class="c7"
          data-blade-component="text"
        >
          Tooltip title
        </p>
        <p
          class="c8"
          data-blade-component="text"
        >
          Hello world
        </p>
        <svg
          aria-hidden="true"
          fill="hsla(216, 33%, 29%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r7:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(216, 27%, 36%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(216, 33%, 29%, 1)"
          />
          <clippath
            id=":r7:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
  </div>
</body>
`;
